syntax = "proto3";
package protos.output.language_specific;

option go_package = "code-analyser/protos/pb/output/languageSpecific";

message EnvOutput{
  //  checker
  bool envUsed = 1;
  //  key values of map
  map<string, string> envKeyValues = 2;
  // variables
  repeated string variables = 4;
}

